--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=database
+DB_DATABASE=databasename
 DB_USERNAME=username
 DB_PASSWORD=password
 
@@ -65,5 +65,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 ALFRESCO_URL=http://172.16.17.12:8080
-ALFRESCO_USER=user
-ALFRESCO_PASS=admin
+ALFRESCO_URL_ADD="http://172.16.17.12:8080/alfresco/api/-default-/public/alfresco/versions/1/nodes/{$folderId}/children"
+ALFRESCO_USER=username
+ALFRESCO_PASS=password
