--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-ALFRESCO_URL=http://172.16.17.12:8080
-ALFRESCO_URL_ADD="http://172.16.17.12:8080/alfresco/api/-default-/public/alfresco/versions/1/nodes/{$folderId}/children"
+ALFRESCO_URL=URL_ALFRESCO
+ALFRESCO_URL_ADD=URL_ADD
 ALFRESCO_USER=username
 ALFRESCO_PASS=password
