--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-ALFRESCO_URL=URL_ALFRESCO
-ALFRESCO_URL_ADD=URL_ADD
+ALFRESCO_URL=http://localhost:8080
+ALFRESCO_URL_ADD=http://localhost:8080/alfresco/api/-default-/public/alfresco/versions/1/nodes/{folderId}/children
+ALFRESCO_URL_DOWNLOAD=http://localhost:8080/alfresco/api/-default-/public/alfresco/versions/1/nodes/{node-id}/content
 ALFRESCO_USER=username
 ALFRESCO_PASS=password
